syntax = "proto3";

package smartcore.bos;

option go_package = "github.com/vanti-dev/sc-bos/pkg/gen";

// ServiceTicketApi is a service which provides an interface for creating and updating service tickets in a
// third party system. e.g. a CAFM.
service ServiceTicketApi {
  rpc CreateTicket(CreateTicketRequest) returns (Ticket) {}
  rpc UpdateTicket(UpdateTicketRequest) returns (Ticket) {}
  // there are intentionally no retrieve and delete operations. smart core is not designed to be a CAFM.
  // we need to be able to raise tickets in the external system and possibly update them if we discover
  // more useful info to help resolve the issue. We do not want to be managing the tickets in smart core.
}

// Ticket represents a service ticket in a third party system.
message Ticket {
  // Id is blank when creating a ticket, and is filled in by the external system. The ID is then used to update the ticket.
  string id = 1;
  // Short description of the issue being reported.
  string description = 2;
  // Full details on the issue being reported. This should include all the available information to help resolve the issue.
  string details = 3;
  // Who reported the issue, this could be a person or an automation. e.g. "Bob" or "Cleaning Assistant".
  string reporter_name = 4;

  enum Classification {
    CLASSIFICATION_UNSPECIFIED = 0;
    MAINTENANCE = 1;
    CLEANING = 2;
    FIRE = 3;
    ELECTRICAL = 4;
    EMERGENCY_REPAIR = 5;
    NON_EMERGENCY_REPAIR = 6;
    PLUMBING = 7;
    WASTE = 8;
    RECYCLING = 9;
    SECURITY = 10;
    URGENT_REPAIR = 11;
    OBSERVATION = 12;
    PORTERAGE = 13;
    SPACE_PREPARATION = 14;
  }
  Classification classification = 5;

  enum Severity {
      SEVERITY_UNSPECIFIED = 0;
      EMERGENCY = 1;
      CRITICAL = 2;
      URGENT = 3;
      HIGH = 4;
      MEDIUM = 5;
      LOW = 6;
  }
  Severity severity = 6;
}

// CreateTicketRequest is the request to create a ticket in the external system.
message CreateTicketRequest {
  string name = 1;
  Ticket ticket = 2;
}

// UpdateTicketRequest is the request to update a ticket in the external system. The ticket ID must be set.
message UpdateTicketRequest {
  string name = 1;
  Ticket ticket = 2;
}

